<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:padding="40dp"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/firebase" />

        <EditText

            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_box_round"
            android:drawableLeft="@drawable/ic_action_email"
            android:ems="10"
            android:hint="@string/txtEmail"
            android:inputType="textEmailAddress" />

        <EditText

            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_box_round"
            android:drawableLeft="@drawable/ic_action_password"
            android:ems="10"
            android:hint="@string/txtPassword"
            android:inputType="textPassword" />

        <Switch
            android:id="@+id/swhSavePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/swhSavePassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_round"
            android:onClick="userSignIn"
            android:text="@string/btnLogin" />

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtRegister"
            android:textColor="#ffffff"
            android:textAlignment="center" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>