<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".CreateUser">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="9dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/txtFirstName"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_box_round"
            android:drawableLeft="@drawable/ic_action_first_name"
            android:ems="10"
            android:hint="First Name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtLastName"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_box_round"
            android:drawableLeft="@drawable/ic_action_last_name"
            android:ems="10"
            android:hint="Last Name"
            android:inputType="textPersonName" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:checkedButton="@+id/radioMale"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:buttonTint="#ffffff"
                android:text="@string/radioMale"
                android:textColor="#ffffff" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="#ffffff"
                android:text="@string/radioFemale"
                android:textColor="#ffffff" />
        </RadioGroup>

        <EditText
            android:id="@+id/txtBio"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_box_round"
            android:drawableLeft="@drawable/ic_action_bio"
            android:ems="10"
            android:hint="Bio"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_box_round"
            android:drawableLeft="@drawable/ic_action_email"
            android:ems="10"
            android:hint="Email"
            android:inputType="textWebEmailAddress" />

        <EditText
            android:id="@+id/txtPassword1"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_box_round"
            android:drawableLeft="@drawable/ic_action_password"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/txtPassword2"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_box_round"
            android:drawableLeft="@drawable/ic_action_password"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_round"
            android:onClick="createAccount"
            android:text="@string/btnRegister" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>